Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14158

[USETUP] Setup fails to install the FAT bootcode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.8
    • Setup
    • None
    • reactos-bootcd-0.4.8-dev-556-g2daf239-x86-gcc-lin-dbg & Oracle Virtualbox Version 5.2.4r119785

    Description

      Steps to reproduce the bug:

      1. Pick a ReactOS release, in this case reactos-bootcd-0.4.8-dev-556-g2daf239-x86-gcc-lin-dbg;
      2. Mount it on a VM, do a total format using FAT as primary filesystem and complete the whole setup installation;
      3. Now that ReactOS has been installed, recap the whole process but at this time do not format the partition, just keep it with the existing filesystem FAT (no changes);
      4. Create the bootloader (both VBR & MBR);
      5. BAM! ReactOS fails to implement the FAT bootcode onto partition!

      Unfortunately I couldn't be able to get a backtrace, the installer didn't break into debugger in any way. Nor typing set condition * first always didn't help the case. By the way, prior to FAT bootcode installation failure, the Console gave this output (probably is this the cause of the said failure?):

      (base/setup/usetup/bootsup.c:2271) SetupCopyFile() failed (Status c0000022)

      I might be biased so I apology for my ignorance but I find it hilarious. What's the point on installing the FAT bootcode to the partition when such bootcode is ALREADY installed in the previous ReactOS installation? Does the 1st-Installer delete that bootcode albeit choosing "keep the filesystem (no changes)" or what?

      Attachments

        1. fastfat_attr.diff
          0.8 kB
        2. fastfat_overwrite.diff
          2 kB
        3. fastfat_readonly.diff
          0.6 kB
        4. reactos-g2daf239-Bug.log
          10 kB
        5. reactos-g2daf239-Image.PNG
          reactos-g2daf239-Image.PNG
          15 kB
        6. usetup_readonly.diff
          3 kB

        Activity

          People

            Heis Spiter Pierre Schweitzer
            Fraizeraust George Bișoc
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: